Fix arithmetic composite filter for auto-vectorization https://bugs.webkit.org/show_bug.cgi?id=92123

Reviewed by Nikolas Zimmermann.

Since only clamping of the result prevents GCC from auto-vectorizing the inner loop, this patch
adds a faster version of the inner loop to handle cases where clamping is unnecessary,

* platform/graphics/filters/FEComposite.cpp:
(WebCore::computeArithmeticPixelsUnclamped):
(WebCore::arithmeticSoftware):

Canonical link: https://commits.webkit.org/110045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123605 268f45cc-cd09-0410-ab3c-d52691b4dbfc